<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name" translatable="false">Open Live</string>
    <string name="placeholder" translatable="false">占位符</string>

    <!--互动直播-->
    <!-- Main Activity -->
    <string name="start_broadcast_title">开始直播</string>
    <string name="topic_edit_hint">输入一个聊天话题</string>
    <string name="need_necessary_permissions">缺少必要权限</string>

    <!-- Setting Activity -->
    <string name="setting_title">设置</string>
    <string name="setting_resolution_title">分辨率</string>
    <string name="setting_stats_title">显示视频统计数据</string>

    <!-- Role Choose Activity -->
    <string name="select_role_title">请选择你的身份</string>
    <string name="select_role_broadcaster">我是主播</string>
    <string name="select_role_audience">我是观众</string>
    <string name="select_role_broadcaster_hint">以主播身份进入</string>
    <string name="select_role_audience_hint">以观众身份进入</string>
    <string name="setting_mirror_encode_title">本地视频编码镜像模式</string>
    <string name="setting_mirror_local_title">本地视频预览镜像模式</string>
    <string name="setting_mirror_remote_title">远端视频渲染镜像模式</string>

    <string-array name="string_array_resolutions">
        <item>320x240</item>
        <item>480x360</item>
        <item>640x360</item>
        <item>640x480</item>
        <item>960x540</item>
        <item>1280x720</item>
    </string-array>

    <!-- Live Activity -->
    <string name="fake_user_name" translatable="false">Shakespeare</string>


    <!-- Legal digits for channel names -->
    <string name="legal_channel_name_characters" translatable="false">&#xA0;abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!#$%&amp;()+,-:;&lt;=.>?@[]^_`{|}~</string>


    <!--云信令-->

    <string name="str_login">Login</string>
    <string name="str_account">Account</string>
    <string name="account_empty">Account can not be empty</string>
    <string name="account_too_long">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space">Account can not starts with space</string>
    <string name="account_literal_null">Account can not be \"null\"</string>
    <string name="login_failed">Login failed</string>

    <string name="title_peer_msg">Peer to peer message</string>
    <string name="title_channel_message">Channel message</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="hint_enable_offline_message">Enable offline message</string>
    <string name="account_cannot_be_yourself">Account can not be yourself</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_join">Join</string>

    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="single_input">Single line input</string>\
    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>

</resources>
