<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:id="@+id/role_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56">
        <TextView
            android:layout_width="@dimen/dp_27"
            android:layout_height="@dimen/dp_27"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_12"
            android:background="@drawable/btn_back_arrow"
            android:onClick="onBackArrowPressed"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/role_content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/role_choose_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_role_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"/>

        <RelativeLayout
            android:id="@+id/broadcaster_layout"
            style="@style/select_role_block"
            android:layout_below="@id/role_choose_title"
            android:onClick="onJoinAsBroadcaster">
            <ImageView
                android:id="@+id/select_role_icon_broadcaster"
                style="@style/select_role_block_icon"
                android:src="@drawable/ic_role_broadcaster"/>
            <RelativeLayout
                style="@style/select_role_block_content">
                <TextView
                    android:id="@+id/select_role_arrow_broadcaster"
                    style="@style/select_role_block_arrow"/>

                <TextView
                    android:id="@+id/select_role_title_broadcaster"
                    style="@style/select_role_block_title"
                    android:layout_toStartOf="@id/select_role_arrow_broadcaster"
                    android:layout_toLeftOf="@id/select_role_arrow_broadcaster"
                    android:text="@string/select_role_broadcaster" />

                <TextView
                    android:id="@+id/select_role_hint_broadcaster"
                    style="@style/select_role_block_hint"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/select_role_title_broadcaster"
                    android:text="@string/select_role_broadcaster_hint"/>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/audience_layout"
            style="@style/select_role_block"
            android:layout_below="@id/broadcaster_layout"
            android:onClick="onJoinAsAudience">
            <ImageView
                android:id="@+id/select_role_icon_audience"
                style="@style/select_role_block_icon"
                android:src="@drawable/ic_role_audience"/>

            <RelativeLayout
                style="@style/select_role_block_content">
                <TextView
                    android:id="@+id/select_role_arrow_audience"
                    style="@style/select_role_block_arrow"/>
                <TextView
                    android:id="@+id/select_role_title_audience"
                    style="@style/select_role_block_title"
                    android:layout_toLeftOf="@id/select_role_arrow_audience"
                    android:layout_toStartOf="@id/select_role_arrow_audience"
                    android:text="@string/select_role_audience"/>
                <TextView
                    android:id="@+id/select_role_hint_audience"
                    style="@style/select_role_block_hint"
                    android:layout_below="@id/select_role_title_audience"
                    android:text="@string/select_role_audience_hint"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_48"
        android:text="@string/powered_by_agora"
        android:textSize="@dimen/sp_12"
        android:textColor="@android:color/white" />
</RelativeLayout>
