<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/role_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:background="@color/blue">

        <TextView
            android:layout_width="@dimen/dp_27"
            android:layout_height="@dimen/dp_27"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_12"
            android:background="@drawable/btn_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_12"
            android:text="@string/setting_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />
    </RelativeLayout>

    <TextView
        android:id="@+id/setting_resolution_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_28"
        android:layout_marginBottom="@dimen/dp_14"
        android:text="@string/setting_resolution_title"
        android:textColor="@color/gray_deep_dark"
        android:textSize="@dimen/sp_16" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resolution_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginEnd="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_28" />

    <View
        android:id="@+id/setting_content_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_divider_height"
        android:layout_marginStart="@dimen/dp_28"
        android:layout_marginLeft="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_marginEnd="@dimen/dp_28"
        android:layout_marginRight="@dimen/dp_28"
        android:background="@color/gray_lightest" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54">

        <TextView
            android:id="@+id/setting_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_28"
            android:text="@string/setting_stats_title"
            android:textColor="@color/gray_deep_dark"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_cb_setting_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_28"
            android:background="@drawable/setting_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_setting_mirror_local_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_28"
            android:text="@string/setting_mirror_local_title"
            android:textColor="@color/gray_deep_dark"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_mirror_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_28" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_mirror_remote_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick">

        <TextView
            android:id="@+id/setting_mirror_remote_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_28"
            android:text="@string/setting_mirror_remote_title"
            android:textColor="@color/gray_deep_dark"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_mirror_remote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_28" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_mirror_encode_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick">

        <TextView
            android:id="@+id/setting_mirror_encode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_28"
            android:text="@string/setting_mirror_encode_title"
            android:textColor="@color/gray_deep_dark"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_mirror_encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_28" />
    </RelativeLayout>
</LinearLayout>
