<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageView
        android:id="@+id/setting_button"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:src="@drawable/btn_setting"
        android:onClick="onSettingClicked"/>

    <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true">
        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="@dimen/dp_158"
            android:layout_height="@dimen/dp_158"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/dp_48"
            android:scaleType="centerCrop"
            android:src="@drawable/main_logo"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/topic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_logo"
            android:layout_alignLeft="@id/start_broadcast_button"
            android:layout_alignRight="@id/start_broadcast_button"
            android:layout_alignStart="@id/start_broadcast_button"
            android:layout_alignEnd="@id/start_broadcast_button"
            android:layout_marginBottom="@dimen/dp_42"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/dp_16"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/blue_alpha"
            android:hint="@string/topic_edit_hint"
            android:textColorHint="@color/blue_alpha"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/blue_alpha"
            android:gravity="center"
            android:digits="@string/legal_channel_name_characters"
            android:lines="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/start_broadcast_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_below="@id/topic_edit"
            android:paddingLeft="@dimen/dp_45"
            android:paddingRight="@dimen/dp_45"
            android:paddingStart="@dimen/dp_45"
            android:paddingEnd="@dimen/dp_45"
            android:textAlignment="gravity"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/start_broadcast_title"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/start_broadcast_text_color"
            android:textAllCaps="false"
            android:onClick="onStartBroadcastClicked"
            android:background="@drawable/start_broadcast_bg"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_48"
        android:text="@string/powered_by_agora"
        android:textSize="@dimen/sp_12"
        android:textColor="@android:color/white" />
</RelativeLayout>
